[package]
name = "meflib"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "Rust Library covering MEF schema"
repository = "https://github.com/rruckley/meflib"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.121"
